RESOLVED FIXED94742
Don't unconditionally define NOMINMAX on Windows
https://bugs.webkit.org/show_bug.cgi?id=94742
Summary Don't unconditionally define NOMINMAX on Windows
Scott Graham
Reported 2012-08-22 12:20:57 PDT
Don't unconditionally define NOMINMAX on Windows
Attachments
Patch (1.05 KB, patch)
2012-08-22 12:22 PDT, Scott Graham
no flags
rebase (1.06 KB, patch)
2012-08-22 13:41 PDT, Scott Graham
no flags
Scott Graham
Comment 1 2012-08-22 12:22:12 PDT
WebKit Review Bot
Comment 2 2012-08-22 12:24:44 PDT
Attachment 159988 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Tools/ChangeLog', u'Tools/TestWebKitAPI/co..." exit_code: 1 Tools/TestWebKitAPI/config.h:46: #ifndef header guard has wrong style, please use: config_h [build/header_guard] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Adrienne Walker
Comment 3 2012-08-22 12:25:47 PDT
Comment on attachment 159988 [details] Patch R=me. Silly style bot.
WebKit Review Bot
Comment 4 2012-08-22 13:21:50 PDT
Comment on attachment 159988 [details] Patch Rejecting attachment 159988 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: ource/WebCore/ChangeLog CONFLICT (content): Merge conflict in Source/WebCore/ChangeLog Failed to merge in the changes. Patch failed at 0001 Skipping css3/flexbox/flexitem.html. When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 164. Full output: http://queues.webkit.org/results/13560388
Scott Graham
Comment 5 2012-08-22 13:41:59 PDT
WebKit Review Bot
Comment 6 2012-08-22 13:44:20 PDT
Attachment 160002 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Tools/ChangeLog', u'Tools/TestWebKitAPI/co..." exit_code: 1 Tools/TestWebKitAPI/config.h:46: #ifndef header guard has wrong style, please use: config_h [build/header_guard] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Review Bot
Comment 7 2012-08-22 14:55:05 PDT
Comment on attachment 160002 [details] rebase Clearing flags on attachment: 160002 Committed r126356: <http://trac.webkit.org/changeset/126356>
WebKit Review Bot
Comment 8 2012-08-22 14:55:08 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.