Don't unconditionally define NOMINMAX on Windows https://bugs.webkit.org/show_bug.cgi?id=94742

Patch by Scott Graham <scottmg@chromium.org> on 2012-08-22
Reviewed by Adrienne Walker.

Avoids a warning when building on Windows when NOMINMAX is defined
elsewhere or on the command line.

* TestWebKitAPI/config.h:

Canonical link: https://commits.webkit.org/112587@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126356 268f45cc-cd09-0410-ab3c-d52691b4dbfc